test/library/standard/Sort/errors/sortDomainArray.assoc5.good
sortDomainArray.chpl:53: error: isSorted() is currently only supported for 1D rectangular arrays
